# lead-management-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py
app/cache/: __init__.py  redis_client.py
app/controllers/: __init__.py  batches.py  enrichment.py  exports.py  health.py  leads.py  mapping_functions.py  sources.py
app/core/: __init__.py  auth.py  config.py  db_dep.py
app/core/errors/: __init__.py  exceptions.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  batch.py  enrichment_attempt.py  enrichment_worker.py  export.py  lead_source.py  mapping_function.py  master_lead.py  raw_row.py
app/schemas/: batch.py  common.py  enrichment.py  export.py  lead.py  mapping_function.py  source.py
app/services/: contact_record.py  dedup.py  enrichment_signals.py  ingestion.py  lead_filters.py  lead_search.py
app/utils/: __init__.py
migrations/: env.py
migrations/versions/: 2371a37f36af_add_enrichment_hold_to_master_leads.py  24917d78c6f4_add_enrichment_attempts.py  38fa8609cfc8_add_enrichment_worker_state.py  4c506a803e1f_add_row_count_with_email_to_batches.py  6bc44aaf7c81_index_normalized_social_linkedin_for_.py  8f5c6bab3031_add_exports_and_export_leads.py  a28ec9635c1c_initial_lms_schema_batches_mapping_.py  aea2243dc6a8_add_person_company_columns_to_master_.py
scripts/: seed_mapping_functions.py
tests/: conftest.py  test_apollo_mapping.py  test_email_junk.py  test_health.py  test_lead_filters.py  test_lead_search.py
(+7 files in other folders)
