[tool.poetry]
name = "lead-management-system"
version = "0.1.0"
description = "Lead Management System backend — CSV ingestion, canonical lead store, enrichment ledger"
authors = []
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.0"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
greenlet = "^3.0.0"
alembic = "^1.14.0"
redis = "^5.2.0"
python-multipart = "^0.0.32"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
ruff = "^0.8.0"

[tool.poetry.extras]
gcp = ["google-cloud-secret-manager"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N802"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
